logs/output2.log
// NOTE 
mer. 08 juin 2022 11:47:05 EAT
Initied Workspace by 
tonymushah
Initied git repertory 
// NOTE 
jeu. 09 juin 2022 07:30:29 EAT
compilation
// NOTE 
jeu. 09 juin 2022 07:30:36 EAT
Running Main
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "java.awt.Graphics.dispose()" because "co" is null
	at java.desktop/javax.swing.JComponent.paint(JComponent.java:1135)
	at structures.Game_table.paint_player(Game_table.java:19)
	at structures.Ping_Pong.drawAllPlayer(Ping_Pong.java:39)
	at structures.Ping_Pong.launch_graph(Ping_Pong.java:48)
	at structures.Ping_Pong.<init>(Ping_Pong.java:53)
	at Main.main(Main.java:5)
// NOTE 
ven. 10 juin 2022 10:51:05 EAT
compilation
// NOTE 
ven. 10 juin 2022 10:51:12 EAT
Running Main
// NOTE 
ven. 10 juin 2022 11:30:59 EAT
// NOTE 
ven. 10 juin 2022 12:04:00 EAT
compilation
// NOTE 
ven. 10 juin 2022 12:04:05 EAT
Running Main
// NOTE 
ven. 10 juin 2022 12:09:21 EAT
// NOTE 
ven. 10 juin 2022 12:09:41 EAT
compilation
// NOTE 
ven. 10 juin 2022 12:09:43 EAT
Running Main
// NOTE 
ven. 10 juin 2022 12:15:14 EAT
// NOTE 
ven. 10 juin 2022 12:16:49 EAT
// NOTE 
ven. 10 juin 2022 12:23:30 EAT
// NOTE 
ven. 10 juin 2022 13:12:47 EAT
// NOTE 
dim. 19 juin 2022 15:11:45 EAT
compilation
Main.java:10: error: cannot access Ping_Pong
        Ping_Pong test = new Ping_Pong();
        ^
  bad class file: ./structures/Ping_Pong.class
    class file has wrong version 61.0, should be 55.0
    Please remove or make sure it appears in the correct subdirectory of the classpath.
Main.java:10: error: cannot find symbol
        Ping_Pong test = new Ping_Pong();
                             ^
  symbol:   class Ping_Pong
  location: class Main
2 errors
// NOTE 
dim. 19 juin 2022 15:11:55 EAT
compilation
Main.java:10: error: cannot access Ping_Pong
        Ping_Pong test = new Ping_Pong();
        ^
  bad class file: ./structures/Ping_Pong.class
    class file has wrong version 61.0, should be 55.0
    Please remove or make sure it appears in the correct subdirectory of the classpath.
Main.java:10: error: cannot find symbol
        Ping_Pong test = new Ping_Pong();
                             ^
  symbol:   class Ping_Pong
  location: class Main
2 errors
// NOTE 
dim. 19 juin 2022 15:12:01 EAT
Running Main
Running Main
// NOTE 
ven. 12 mai 2023 21:13:10 EAT
Error: Could not find or load main class 
Caused by: java.lang.ClassNotFoundException: 
